k8s-practice/group-study/q6/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    ns: joe
  name: joebewda-netpol
spec:
  finalizers:
  - kubernetes
status:
  phase: Active

---
apiVersion: v1
kind: Namespace
metadata:
  name: test-ns
spec:
  finalizers:
  - kubernetes
status:
  phase: Active
