k8s-practice/group-study/q6/ubuntu-test-ns.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: ubuntu-net-ns
  name: ubuntu-net-ns
  namespace: test-ns
spec:
  containers:
  - image: ubuntu
    name: ubuntu-netpol
    command:
    - "sleep"
    - "500000"
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
