k8s-practice/group-study/q6/hi-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hi-app
    env: internal
  name: hi-app
  namespace: joebewda-netpol
spec:
  ports:
  - port: 6548
    protocol: TCP
    targetPort: 80
  selector:
    app: hi-app
    env: internal
